Now checking for old skins by running through the skin to see if there are any transparent pixels. Also cleaned up a bit.

--- a/css/main.scss
+++ b/css/main.scss
@@ -36,7 +36,7 @@ body {
 	height: 170px;
 	text-align: center;
 }
-.player-head {
+.player-head-container {
 	width: 100px;
 	height: 100px;
 	margin: 0 auto;
