--- a/css/main.scss
+++ b/css/main.scss
@@ -37,10 +37,28 @@ body {
 	text-align: center;
 }
 .player-head-container {
+	position: relative;
 	width: 100px;
 	height: 100px;
 	margin: 0 auto;
-	box-shadow: 0 0 10px rgba(0, 0, 0, 0.6)
+	overflow: hidden;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
+	&:hover .player-hat {
+		opacity: 0;
+	}
+}
+.player-head {
+	position: absolute;
+	top: -100px;
+	left: -100px;
+	z-index: 1;
+}
+.player-hat {
+	position: absolute;
+	top: -100px;
+	left: -500px;
+	z-index: 2;
+	transition: opacity 0.4s;
 }
 .player-name {
 	margin-top: 10px;
