--- a/css/main.scss
+++ b/css/main.scss
@@ -4,6 +4,15 @@
 // Variables
 $site-width: 960;
 
+$screen-sm-min: 768px;
+$screen-md-min: 992px;
+$screen-lg-min: 1200px;
+
+//@media (min-width: $screen-sm-min) { ... }
+//@media (min-width: $screen-md-min) { ... }
+//@media (min-width: $screen-lg-min) { ... }
+
+
 // Colors
 // $color-blue: #60aff0;
 
@@ -48,10 +57,10 @@ body {
 	}
 }
 .player-head {
-	position: absolute;
-	top: -100px;
-	left: -100px;
-	z-index: 1;
+	// position: absolute;
+	// top: -100px;
+	// left: -100px;
+	// z-index: 1;
 }
 .player-hat {
 	position: absolute;
@@ -62,4 +71,22 @@ body {
 }
 .player-name {
 	margin-top: 10px;
+}
+.loader {
+	margin-top: 34px;
+}
+
+.offline-players {
+	border-top: 1px solid #ccc;
+	.player {
+		width: 140px;
+		height: 120px;
+	}
+	.player-head-container {
+		width: 50px;
+		height: 50px;
+	}
+	.loader {
+		margin-top: 9px;
+	}
 }
