--- a/css/main.scss
+++ b/css/main.scss
@@ -39,16 +39,15 @@ body {
 	text-align: center;
 }
 
+
+
+// Players (common)
 .player{
 	display: inline-block;
-	width: 160px;
-	height: 170px;
 	text-align: center;
 }
 .player-head-container {
 	position: relative;
-	width: 100px;
-	height: 100px;
 	margin: 0 auto;
 	overflow: hidden;
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
@@ -57,25 +56,44 @@ body {
 	}
 }
 .player-head {
-	// position: absolute;
-	// top: -100px;
-	// left: -100px;
-	// z-index: 1;
+	position: absolute;
+	z-index: 1;
 }
 .player-hat {
 	position: absolute;
-	top: -100px;
-	left: -500px;
 	z-index: 2;
 	transition: opacity 0.4s;
 }
 .player-name {
 	margin-top: 10px;
 }
-.loader {
-	margin-top: 34px;
+
+
+// Online Players
+.online-players {
+	.player {
+		width: 160px;
+		height: 170px;
+	}
+	.player-head-container {
+		width: 100px;
+		height: 100px;
+	}
+	.loader {
+		margin-top: 34px;
+	}
+	.player-head {
+		top: -100px;
+		left: -100px;
+	}
+	.player-hat {
+		top: -100px;
+		left: -500px;
+	}
 }
 
+
+// Offline Players
 .offline-players {
 	border-top: 1px solid #ccc;
 	.player {
@@ -88,5 +106,13 @@ body {
 	}
 	.loader {
 		margin-top: 9px;
+	}
+	.player-head {
+		top: -50px;
+		left: -50px;
+	}
+	.player-hat {
+		top: -50px;
+		left: -250px;
 	}
 }
