--- a/css/main.scss
+++ b/css/main.scss
@@ -34,6 +34,41 @@ body {
 }
 
 
+// Header 
+.header-wrap {
+	padding: 10px 0;
+	box-shadow: 0 0 6px rgba(0,0,0,0.4);
+	background: #fff;
+	ul {
+		margin: 0;
+		padding: 0;
+		text-align: center;
+		font-size: 1.2em;
+	}
+	li {
+		display: inline-block;
+		margin-left: 10px;
+		a {
+			display: block;
+			padding: 10px 20px;
+			color: #000;
+			text-decoration: none;
+		}
+		&:first-child {
+			margin-left: 0;
+		}
+		&.active {
+			background: #f5f5f5;
+			border-radius: 4px;
+			box-shadow: 0 0 6px rgba(0,0,0,0.4) inset;
+			a {
+				color: green;
+			}
+		}
+	}
+}
+
+
 // Main 
 .wrapper {
 	text-align: center;
@@ -115,4 +150,11 @@ body {
 		top: -50px;
 		left: -250px;
 	}
+}
+
+
+.whitelist-note {
+	margin-top: 30px;
+	line-height: 1.5em;
+	font-size: 0.9em;
 }
