--- a/css/main.scss
+++ b/css/main.scss
@@ -102,13 +102,20 @@ body {
 .player-name {
 	margin-top: 10px;
 }
-
+.player-kdr {
+	font-size: 0.7em;
+	opacity: 0;
+	transition: opacity 0.2s;
+	&.visible {
+		opacity: 1;
+	}
+}
 
 // Online Players
 .online-players {
 	.player {
 		width: 160px;
-		height: 170px;
+		margin-bottom: 30px;
 	}
 	.player-head-container {
 		width: 100px;
@@ -133,7 +140,7 @@ body {
 	border-top: 1px solid #ccc;
 	.player {
 		width: 140px;
-		height: 120px;
+		margin-bottom: 40px;
 	}
 	.player-head-container {
 		width: 50px;
@@ -155,6 +162,7 @@ body {
 
 .whitelist-note {
 	margin-top: 30px;
+	margin-bottom: 30px;
 	line-height: 1.5em;
 	font-size: 0.9em;
 }
