--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,480 @@
-/*! normalize.css v1.1.1 | MIT License | git.io/normalize */article,aside,details,figcaption,figure,footer,header,hgroup,main,nav,section,summary{display:block}audio,canvas,video{display:inline-block;*display:inline;*zoom:1}audio:not([controls]){display:none;height:0}[hidden]{display:none}html{background:#fff;color:#000;font-size:100%;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%}html,button,input,select,textarea{font-family:sans-serif}body{margin:0}a:focus{outline:thin dotted}a:active,a:hover{outline:0}h1{font-size:2em;margin:.67em 0}h2{font-size:1.5em;margin:.83em 0}h3{font-size:1.17em;margin:1em 0}h4{font-size:1em;margin:1.33em 0}h5{font-size:.83em;margin:1.67em 0}h6{font-size:.67em;margin:2.33em 0}abbr[title]{border-bottom:1px dotted}b,strong{font-weight:bold}blockquote{margin:1em 40px}dfn{font-style:italic}hr{-moz-box-sizing:content-box;box-sizing:content-box;height:0}mark{background:#ff0;color:#000}p,pre{margin:1em 0}code,kbd,pre,samp{font-family:monospace,serif;_font-family:'courier new',monospace;font-size:1em}pre{white-space:pre;white-space:pre-wrap;word-wrap:break-word}q{quotes:none}q:before,q:after{content:'';content:none}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sup{top:-0.5em}sub{bottom:-0.25em}dl,menu,ol,ul{margin:1em 0}dd{margin:0 0 0 40px}menu,ol,ul{padding:0 0 0 40px}nav ul,nav ol{list-style:none;list-style-image:none}img{border:0;-ms-interpolation-mode:bicubic}svg:not(:root){overflow:hidden}figure{margin:0}form{margin:0}fieldset{border:1px solid silver;margin:0 2px;padding:.35em .625em .75em}legend{border:0;padding:0;white-space:normal;*margin-left:-7px}button,input,select,textarea{font-size:100%;margin:0;vertical-align:baseline;*vertical-align:middle}button,input{line-height:normal}button,select{text-transform:none}button,html input[type="button"],input[type="reset"],input[type="submit"]{-webkit-appearance:button;cursor:pointer;*overflow:visible}button[disabled],html input[disabled]{cursor:default}input[type="checkbox"],input[type="radio"]{box-sizing:border-box;padding:0;*height:13px;*width:13px}input[type="search"]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box}input[type="search"]::-webkit-search-cancel-button,input[type="search"]::-webkit-search-decoration{-webkit-appearance:none}button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0}textarea{overflow:auto;vertical-align:top}table{border-collapse:collapse;border-spacing:0}html,button,input,select,textarea{color:#222}body{font-size:1em;line-height:1.4;font-family:Verdana, Arial, Helvetica, sans-serif;font-weight:400}::-moz-selection{background:#b3d4fc;text-shadow:none}::selection{background:#b3d4fc;text-shadow:none}hr{display:block;height:1px;border:0;border-top:1px solid #ccc;margin:1em 0;padding:0}img{vertical-align:middle}fieldset{border:0;margin:0;padding:0}textarea{resize:vertical}.chromeframe{margin:.2em 0;background:#ccc;color:#000;padding:.2em 0}.ir{background-color:transparent;border:0;overflow:hidden;*text-indent:-9999px}.ir:before{content:"";display:block;width:0;height:150%}.hidden{display:none !important;visibility:hidden}.visuallyhidden{border:0;clip:rect(0 0 0 0);height:1px;margin:-1px;overflow:hidden;padding:0;position:absolute;width:1px}.visuallyhidden.focusable:active,.visuallyhidden.focusable:focus{clip:auto;height:auto;margin:0;overflow:visible;position:static;width:auto}.invisible{visibility:hidden}.clearfix:before,.clearfix:after{content:" ";display:table}.clearfix:after{clear:both}.clearfix{*zoom:1}@media print{*{background:transparent !important;color:#000 !important;box-shadow:none !important;text-shadow:none !important}a,a:visited{text-decoration:underline}a[href]:after{content:" (" attr(href) ")"}abbr[title]:after{content:" (" attr(title) ")"}.ir a:after,a[href^="javascript:"]:after,a[href^="#"]:after{content:""}pre,blockquote{border:1px solid #999;page-break-inside:avoid}thead{display:table-header-group}tr,img{page-break-inside:avoid}img{max-width:100% !important}@page{margin:.5cm}p,h2,h3{orphans:3;widows:3}h2,h3{page-break-after:avoid}}html,body{min-width:960px}html{background:url("../img/tile_bg.png") repeat center top}body{font-family:"Roboto", sans-serif}.container{margin:0 auto;width:960px;position:relative}.header-wrap{padding:10px 0;box-shadow:0 0 6px rgba(0,0,0,0.4);background:#fff}.header-wrap ul{margin:0;padding:0;text-align:center;font-size:1.2em}.header-wrap li{display:inline-block;margin-left:10px}.header-wrap li a{display:block;padding:10px 20px;color:#000;text-decoration:none}.header-wrap li:first-child{margin-left:0}.header-wrap li.active{background:#f5f5f5;border-radius:4px;box-shadow:0 0 6px rgba(0,0,0,0.4) inset}.header-wrap li.active a{color:green}.wrapper{text-align:center}.player{display:inline-block;text-align:center}.player-head-container{position:relative;margin:0 auto;overflow:hidden;box-shadow:0 0 10px rgba(0,0,0,0.6)}.player-head-container:hover .player-hat{opacity:0}.player-head{position:absolute;z-index:1}.player-hat{position:absolute;z-index:2;transition:opacity 0.4s}.player-info{opacity:0;transition:opacity 0.2s}.player-info.visible{opacity:1}.player-name{margin-top:10px}.player-kdr{font-size:0.7em;opacity:0}.player-kdr.visible{opacity:1}.online-players .player{width:160px;margin-bottom:30px}.online-players .player-head-container{width:100px;height:100px}.online-players .loader{margin-top:34px}.online-players .player-head{top:-100px;left:-100px}.online-players .player-hat{top:-100px;left:-500px}.offline-players{border-top:1px solid #ccc}.offline-players .player{width:140px;margin-bottom:40px}.offline-players .player-head-container{width:50px;height:50px}.offline-players .loader{margin-top:9px}.offline-players .player-head{top:-50px;left:-50px}.offline-players .player-hat{top:-50px;left:-250px}.whitelist-note{margin-top:30px;margin-bottom:30px;line-height:1.5em;font-size:0.9em}
+/*! normalize.css v1.1.1 | MIT License | git.io/normalize */
+article, aside, details, figcaption, figure, footer, header, hgroup, main, nav, section, summary {
+  display: block; }
+
+audio, canvas, video {
+  display: inline-block;
+  *display: inline;
+  *zoom: 1; }
+
+audio:not([controls]) {
+  display: none;
+  height: 0; }
+
+[hidden] {
+  display: none; }
+
+html {
+  background: #fff;
+  color: #000;
+  font-size: 100%;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%; }
+
+html, button, input, select, textarea {
+  font-family: sans-serif; }
+
+body {
+  margin: 0; }
+
+a:focus {
+  outline: thin dotted; }
+
+a:active, a:hover {
+  outline: 0; }
+
+h1 {
+  font-size: 2em;
+  margin: .67em 0; }
+
+h2 {
+  font-size: 1.5em;
+  margin: .83em 0; }
+
+h3 {
+  font-size: 1.17em;
+  margin: 1em 0; }
+
+h4 {
+  font-size: 1em;
+  margin: 1.33em 0; }
+
+h5 {
+  font-size: .83em;
+  margin: 1.67em 0; }
+
+h6 {
+  font-size: .67em;
+  margin: 2.33em 0; }
+
+abbr[title] {
+  border-bottom: 1px dotted; }
+
+b, strong {
+  font-weight: bold; }
+
+blockquote {
+  margin: 1em 40px; }
+
+dfn {
+  font-style: italic; }
+
+hr {
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
+  height: 0; }
+
+mark {
+  background: #ff0;
+  color: #000; }
+
+p, pre {
+  margin: 1em 0; }
+
+code, kbd, pre, samp {
+  font-family: monospace,serif;
+  _font-family: 'courier new',monospace;
+  font-size: 1em; }
+
+pre {
+  white-space: pre;
+  white-space: pre-wrap;
+  word-wrap: break-word; }
+
+q {
+  quotes: none; }
+
+q:before, q:after {
+  content: '';
+  content: none; }
+
+small {
+  font-size: 80%; }
+
+sub, sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline; }
+
+sup {
+  top: -0.5em; }
+
+sub {
+  bottom: -0.25em; }
+
+dl, menu, ol, ul {
+  margin: 1em 0; }
+
+dd {
+  margin: 0 0 0 40px; }
+
+menu, ol, ul {
+  padding: 0 0 0 40px; }
+
+nav ul, nav ol {
+  list-style: none;
+  list-style-image: none; }
+
+img {
+  border: 0;
+  -ms-interpolation-mode: bicubic; }
+
+svg:not(:root) {
+  overflow: hidden; }
+
+figure {
+  margin: 0; }
+
+form {
+  margin: 0; }
+
+fieldset {
+  border: 1px solid silver;
+  margin: 0 2px;
+  padding: .35em .625em .75em; }
+
+legend {
+  border: 0;
+  padding: 0;
+  white-space: normal;
+  *margin-left: -7px; }
+
+button, input, select, textarea {
+  font-size: 100%;
+  margin: 0;
+  vertical-align: baseline;
+  *vertical-align: middle; }
+
+button, input {
+  line-height: normal; }
+
+button, select {
+  text-transform: none; }
+
+button, html input[type="button"], input[type="reset"], input[type="submit"] {
+  -webkit-appearance: button;
+  cursor: pointer;
+  *overflow: visible; }
+
+button[disabled], html input[disabled] {
+  cursor: default; }
+
+input[type="checkbox"], input[type="radio"] {
+  box-sizing: border-box;
+  padding: 0;
+  *height: 13px;
+  *width: 13px; }
+
+input[type="search"] {
+  -webkit-appearance: textfield;
+  -moz-box-sizing: content-box;
+  -webkit-box-sizing: content-box;
+  box-sizing: content-box; }
+
+input[type="search"]::-webkit-search-cancel-button, input[type="search"]::-webkit-search-decoration {
+  -webkit-appearance: none; }
+
+button::-moz-focus-inner, input::-moz-focus-inner {
+  border: 0;
+  padding: 0; }
+
+textarea {
+  overflow: auto;
+  vertical-align: top; }
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0; }
+
+html, button, input, select, textarea {
+  color: #222; }
+
+body {
+  font-size: 1em;
+  line-height: 1.4;
+  font-family: Verdana, Arial, Helvetica, sans-serif;
+  font-weight: 400; }
+
+::-moz-selection {
+  background: #b3d4fc;
+  text-shadow: none; }
+
+::selection {
+  background: #b3d4fc;
+  text-shadow: none; }
+
+hr {
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 1px solid #ccc;
+  margin: 1em 0;
+  padding: 0; }
+
+img {
+  vertical-align: middle; }
+
+fieldset {
+  border: 0;
+  margin: 0;
+  padding: 0; }
+
+textarea {
+  resize: vertical; }
+
+.chromeframe {
+  margin: .2em 0;
+  background: #ccc;
+  color: #000;
+  padding: .2em 0; }
+
+.ir {
+  background-color: transparent;
+  border: 0;
+  overflow: hidden;
+  *text-indent: -9999px; }
+
+.ir:before {
+  content: "";
+  display: block;
+  width: 0;
+  height: 150%; }
+
+.hidden {
+  display: none !important;
+  visibility: hidden; }
+
+.visuallyhidden {
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px; }
+
+.visuallyhidden.focusable:active, .visuallyhidden.focusable:focus {
+  clip: auto;
+  height: auto;
+  margin: 0;
+  overflow: visible;
+  position: static;
+  width: auto; }
+
+.invisible {
+  visibility: hidden; }
+
+.clearfix:before, .clearfix:after {
+  content: " ";
+  display: table; }
+
+.clearfix:after {
+  clear: both; }
+
+.clearfix {
+  *zoom: 1; }
+
+@media print {
+  * {
+    background: transparent !important;
+    color: #000 !important;
+    box-shadow: none !important;
+    text-shadow: none !important; }
+
+  a, a:visited {
+    text-decoration: underline; }
+
+  a[href]:after {
+    content: " (" attr(href) ")"; }
+
+  abbr[title]:after {
+    content: " (" attr(title) ")"; }
+
+  .ir a:after, a[href^="javascript:"]:after, a[href^="#"]:after {
+    content: ""; }
+
+  pre, blockquote {
+    border: 1px solid #999;
+    page-break-inside: avoid; }
+
+  thead {
+    display: table-header-group; }
+
+  tr, img {
+    page-break-inside: avoid; }
+
+  img {
+    max-width: 100% !important; }
+
+  @page {
+    margin: .5cm; }
+  p, h2, h3 {
+    orphans: 3;
+    widows: 3; }
+
+  h2, h3 {
+    page-break-after: avoid; } }
+html, body {
+  /*min-width: 960px;*/ }
+
+html {
+  background: url("../img/tile_bg.png") repeat center top; }
+
+body {
+  font-family: "Roboto", sans-serif; }
+
+.container {
+  /*width: 960px;*/
+  position: relative;
+  width: 66%;
+  margin-left: auto;
+  margin-right: auto; }
+
+.header-wrap {
+  padding: 10px 0;
+  box-shadow: 0 0 6px rgba(0, 0, 0, 0.4);
+  background: #fff; }
+  .header-wrap ul {
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    font-size: 1.2em; }
+  .header-wrap li {
+    display: inline-block;
+    margin-left: 10px; }
+    .header-wrap li a {
+      display: block;
+      padding: 10px 20px;
+      color: #000;
+      text-decoration: none; }
+    .header-wrap li:first-child {
+      margin-left: 0; }
+    .header-wrap li.active {
+      background: #f5f5f5;
+      border-radius: 4px;
+      box-shadow: 0 0 6px rgba(0, 0, 0, 0.4) inset; }
+      .header-wrap li.active a {
+        color: green; }
+
+.wrapper {
+  text-align: center; }
+
+.player {
+  display: inline-block;
+  text-align: center; }
+
+.player-head-container {
+  position: relative;
+  margin: 0 auto;
+  overflow: hidden;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.6); }
+  .player-head-container:hover .player-hat {
+    opacity: 0; }
+
+.player-head {
+  position: absolute;
+  z-index: 1; }
+
+.player-hat {
+  position: absolute;
+  z-index: 2;
+  transition: opacity 0.4s; }
+
+.player-info {
+  opacity: 0;
+  transition: opacity 0.2s; }
+  .player-info.visible {
+    opacity: 1; }
+
+.player-name {
+  margin-top: 10px; }
+
+.player-kdr {
+  font-size: 0.7em;
+  opacity: 0; }
+  .player-kdr.visible {
+    opacity: 1; }
+
+.online-players .player {
+  width: 160px;
+  margin-bottom: 30px; }
+.online-players .player-head-container {
+  width: 100px;
+  height: 100px; }
+.online-players .loader {
+  margin-top: 34px; }
+.online-players .player-head {
+  top: -100px;
+  left: -100px; }
+.online-players .player-hat {
+  top: -100px;
+  left: -500px; }
+
+.offline-players {
+  border-top: 1px solid #ccc; }
+  .offline-players .player {
+    width: 140px;
+    margin-bottom: 40px; }
+  .offline-players .player-head-container {
+    width: 50px;
+    height: 50px; }
+  .offline-players .loader {
+    margin-top: 9px; }
+  .offline-players .player-head {
+    top: -50px;
+    left: -50px; }
+  .offline-players .player-hat {
+    top: -50px;
+    left: -250px; }
+
+.whitelist-note {
+  margin-top: 30px;
+  margin-bottom: 30px;
+  line-height: 1.5em;
+  font-size: 0.9em; }
+
+@media only screen and (min-width: 40.063em) and (max-width: 64em) {
+  /*div.players.offline-players{
+  	width: 100%;
+  	max-width: 45.5rem;
+  }
+  
+  .container {
+  	position: relative;
+      width: 66%;
+      margin-left: auto;
+  	margin-right: auto;
+  }
+  */ }
+@media only screen and (max-width: 40em) {
+  div.players.offline-players {
+    width: 100%;
+    max-width: 26.3rem;
+    position: relative; }
+
+  .offline-players .player {
+    width: 98px;
+    margin-bottom: 30px; }
+
+  .container {
+    position: relative;
+    width: 66%;
+    margin-left: auto;
+    margin-right: auto; }
+
+  body {
+    font-size: 14px; } }
+
+/*# sourceMappingURL=main.css.map */
